--- a/MVCPersonal/Views/Home/Index.cshtml
+++ b/MVCPersonal/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center flex-auto w-screen bg-black border-solid border-2 rounded-s-lg">
+    <h1 class="text-pink-500 bg-black">Welcome</h1><br />
+    <p class="text-lime-600">
+        This is a personal page using dotNet MVC architecture as compared to other JavaScript Frameworks.
+    </p>
+    <p>Inclusive but not limited to: 
+        <ul class="text-center text-purple-400 rounded border-zinc-800">
+            <li>Vue JS</li>
+            <li>React JS</li>
+            <li>SolidJS</li>
+            <li>NextJS</li>
+            <li>SvelteJS</li>
+        </ul>
+    </p>
 </div>
