--- a/MVCPersonal/Views/Home/Index.cshtml
+++ b/MVCPersonal/Views/Home/Index.cshtml
@@ -1,18 +1,25 @@
 ﻿@{
 }
 
-<div class="text-center flex-auto w-screen bg-black border-solid border-2 rounded-s-lg">
-    <h1 class="text-pink-500 bg-black">Welcome</h1><br />
-    <p class="text-lime-600">
-        This is a personal page using dotNet MVC architecture as compared to other JavaScript Frameworks.
-    </p>
-    <p>Inclusive but not limited to: 
-        <ul class="text-center text-purple-400 rounded border-zinc-800">
-            <li>Vue JS</li>
-            <li>React JS</li>
-            <li>SolidJS</li>
-            <li>NextJS</li>
-            <li>SvelteJS</li>
-        </ul>
-    </p>
+<div class="text-center flex-auto w-screen bg-amber-600 rounded-lg">
+	<h1 class="text-pink-500 rounded-b-full text-lg"><span class="bg-black">Welcome</span></h1><br />
+	<p class="text-amber-300">
+		This is a personal page using ASP.NET MVC architecture as compared to other JavaScript Frameworks.
+	</p>
+	<p>
+		Inclusive but not limited to:
+		<ul class="text-center text-purple-400 rounded-full border-zinc-800">
+			<li>Vue JS</li>
+			<li>React JS</li>
+			<li>SolidJS</li>
+			<li>NextJS</li>
+			<li>SvelteJS</li>
+		</ul>
+	</p>
+</div>
+
+<div class="text-center flex-auto w-screen mt-4">
+	<p><span class="bg-black text-orange-300">This is a project whereby I write CSHTML code with C# for fun and for personal development.</span></p>
+	<p>It is meant for both school and personal development with the twist of using Tailwind CSS.</p>
+
 </div>
