--- a/MVCPersonal/Views/Shared/_Layout.cshtml
+++ b/MVCPersonal/Views/Shared/_Layout.cshtml
@@ -10,8 +10,10 @@
 <body>
     <header>
         <nav class="flex bg-teal-500">
-            <div>
+            <div class="container">
                 <ul>
+                    <a asp-area="" asp-controller="People" asp-action="Index">People Test</a>
+                    <a asp-controller="Shows" asp-action="Index">Shows test</a>
                 </ul>
             </div>
         </nav>
